--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "5.2.11",
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/core": "~4.18.0",
+        "@ionic-native/ibeacon": "^4.20.0",
         "@ionic-native/push": "^4.20.0",
         "@ionic-native/splash-screen": "~4.18.0",
         "@ionic-native/status-bar": "~4.18.0",
@@ -30,6 +31,7 @@
         "@ngx-translate/http-loader": "^4.0.0",
         "cordova-android": "7.1.0",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-ibeacon": "3.7.0",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^3.0.0",
         "cordova-plugin-splashscreen": "5.0.2",
@@ -61,7 +63,8 @@
                 "SENDER_ID": "540743657036",
                 "ANDROID_SUPPORT_V13_VERSION": "27.+",
                 "FCM_VERSION": "11.6.2"
-            }
+            },
+            "com.unarin.cordova.beacon": {}
         },
         "platforms": [
             "android"
